add www folder and small code correction

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,6 @@
     <p>Inhalt</p>
 
 
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
